// protoc --go_out=plugins=grpc:. *.proto
// protoc -I src/proto/user/v1/ --go_out=plugins=grpc:. src/proto/user/v1/*.proto
syntax = "proto3";
package pb_user_v1;

message UserProto {
  int64 user_id = 1;
  string user_name = 2;
}


